--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="description" content="Chronicle App"/><link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative:wght@700&family=Libre+Baskerville&display=swap" rel="stylesheet"><title>Chronicle</title><link rel="icon" href="/home/michael/projects/chronical-tools/public/favicon.png"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="/home/michael/projects/chronical-tools/public/bundle.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Chronicle App"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative:wght@700&family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <title>Chronicle</title>
+    <link rel="icon" href="./favicon.png">
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script src="./bundle.js"></script>
+  </body>
+</html>
