--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative:wght@700&family=Libre+Baskerville&display=swap" rel="stylesheet">
     <title>Chronicle</title>
+    <link rel="icon" href="./favicon.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="./bundle.js"></script>
   </body>
 </html>
